// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover/> renders just the trigger when inactive 1`] = `
Array [
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="button"
    onClick={[Function]}
  >
    <svg
      data-filename="assets/icons/more-vertical.svg"
    />
  </button>,
  <div
    onClick={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  />,
]
`;

exports[`<Popover/> renders the trigger and the popover when active 1`] = `
Array [
  <button
    aria-expanded={true}
    aria-haspopup="true"
    className="button"
    onClick={[Function]}
  >
    <svg
      data-filename="assets/icons/more-vertical.svg"
    />
  </button>,
  <div
    onClick={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="popover Foo"
      role="dialog"
    >
      Foo
    </div>
  </div>,
]
`;
